--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <!-- Side Bar -->
             <aside class="sidebar">
-                <img src="/img/my_photo.jpg" alt="user photo" class="photo" />
+                <img src="./img/my_photo.jpg" alt="user photo" class="photo" />
                 <!-- #contact -->
                 <div class="contactas">
                     <h3 class="sidebar_title">Contacts</h3>
